--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
