--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "dev": "nodemon server.js",
     "cleanup:dry-run": "node scripts/cleanup-orphaned-files.js --dry-run",
     "cleanup": "node scripts/cleanup-orphaned-files.js",
-    "cleanup:help": "echo \"Usage: npm run cleanup:dry-run (to preview) or npm run cleanup (to delete)\""
+    "cleanup:help": "echo \"Usage: npm run cleanup:dry-run (to preview) or npm run cleanup (to delete)\"",
+    "cleanup:mcq": "node scripts/cleanup-duplicate-mcq-progress.js",
+    "cleanup:mcq:help": "echo \"Usage: npm run cleanup:mcq (to clean up duplicate MCQ progress entries)\""
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
